--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,11 +40,11 @@
             </div>
         </div>
     </nav>
-    <header id="first">
+    <header>
       <div class="header-content">
           <div class="inner">
-              <h1 class="">I AM AREUM JOEN</h1>
-              <h4>POSITIVE | CREATING | DREAMING WEB PUBLISHER</h4>
+              <!-- <h1 class="">I AM AREUM JOEN</h1> -->
+              <h4>hopeful | dreaming | skillful WEB PUBLISHER</h4>
           </div>
       </div>
       <div class="header-content-bg">
@@ -143,7 +143,8 @@
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
                                     <p>시드물 홈페이지 리뉴얼</p>
-                                    <p>PC</p>
+                                    <p>PC | Main page</p>
+                                    <p>Sub page(MIN JUNG GI EGF AMPLE)</p>
                                 </div>
                             </div>
                         </div>
@@ -180,6 +181,20 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                        <img src="./assets/dodream.jpg" class="img-responsive" alt="Image 2">
+                        <div class="gallery-box-caption">
+                            <div class="gallery-box-content">
+                                <div>
+                                    <i class="glyphicon glyphicon-link"></i>
+                                    <p>평광교회 청년부 웹사이트 제작 중</p>
+                                    <p>PC</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
             </div>
         </div>
@@ -191,8 +206,7 @@
             <div class="row contact-rbga-padding">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="margin-top-0 wow fadeIn fotexth2">CONTACT ME</h2>
-                    <hr class="primary">
-                    <p class="fotext">I love WEB PUBLISING. Fill out the form below and i will business with you</p>
+                    <hr class="primary">                    
                 </div>
               <div>
                 <div class="col-lg-6 wow fadeInUp delay-06s">
