--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -194,13 +194,13 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                    <a href="https://pkdodream.com:5004/index.php" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
                         <img src="./assets/dodream.jpg" class="img-responsive" alt="Image 2">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
-                                    <p>평광교회 청년부 웹사이트 제작 중</p>
+                                    <p>평광교회 청년부 웹사이트 및 상세페이지 제작 중</p>
                                     <p>PC</p>
                                 </div>
                             </div>
