--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -195,7 +195,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/F&B.png" alt="포트폴리오 작업물. f&b 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/portfolio/work_f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>F&b</strong><br>쇼핑몰사이트</a>
@@ -209,7 +209,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/sidmool_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_sidmool.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/portfolio/work_sidmool.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>SIDMOOL</strong><br>천연화장품쇼핑몰<br>리뉴얼사이트</a>
@@ -223,7 +223,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/dodream.png" alt="포트폴리오 작업물. dodream 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_dodream.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/portfolio/work_dodream.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>DODREAM</strong></a>
@@ -237,7 +237,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/motte.png" alt="포트폴리오 작업물. motte 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_motte.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github//work_motte.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#">싱어송라이터<br><strong>motte</strong><br>소개페이지</a>
