--- a/portfolio/work_sidmool.html
+++ b/portfolio/work_sidmool.html
@@ -248,7 +248,7 @@
       .top_box{height: 780px;background-size: auto;}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
       .top_box .main_title1{left: 60px;}
-      .top_box .main_title2{margin-left: -5px;}
+      .top_box .main_title2{font-size: 40px;}
       .top_box .info_title .info_role{margin-right: 0;}
       .title2, .title3{font-size: 24px;}
       .details{height: 800px; margin-top: 100px;}
