--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -237,7 +237,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/motte.png" alt="포트폴리오 작업물. motte 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github//work_motte.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/portfolio/work_motte.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#">싱어송라이터<br><strong>motte</strong><br>소개페이지</a>
