--- a/AreumJeon/work_sidmool.html
+++ b/AreumJeon/work_sidmool.html
@@ -245,10 +245,10 @@
     /* 모바일================================================================== */
     @media (max-width:767px) {
 
-      .top_box{height: 780px;}
+      .top_box{height: 780px;background-size: auto;}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
-      .top_box .main_title1{left: 60px;}
-      .top_box .main_title2{margin-left: -5px;}
+      .top_box .main_title1{left: 58px;}
+      .top_box .main_title2{font-size: 40px;margin-top: 10px;}
       .top_box .info_title .info_role{margin-right: 0;}
       .title2, .title3{font-size: 24px;}
       .details{height: 800px; margin-top: 100px;}
