--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -250,7 +250,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 item" data-category="PC">
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
-                      <img src="images/sidmool_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
+                      <img src="images/featuredwork5.jpg" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
                       <a class="overlay_background" href="https://jar3543.github.io/github/portfolio/work_gm.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
