--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -250,8 +250,8 @@
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 item" data-category="PC">
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
-                      <img src="images/gentlemonster_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/portfolio/gentlemonster/index.html"></a>
+                      <img src="images/gentlemonster_main.png" alt="포트폴리오 작업물. 젠틀몬스터 이미지" class="img-responsive">
+                      <a class="overlay_background" href="https://jar3543.github.io/github/gentlemonster/index.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>GENTLEMONSTER</strong>리뉴얼사이트</a>
