--- a/gentlemonster/index.html
+++ b/gentlemonster/index.html
@@ -35,10 +35,10 @@
 				<button class="cancel"><i class="fas fa-times"></i><span class="skip">닫기</span></button>
 				<div class="popup_body">
 					<form action="index.html">
-						<label for="id" class=""><span class="skip">아이디</span></label>
+						<label for="id"><i class="fas fa-user"></i><span class="skip">아이디</span></label>
 						<input type="text" placeholder="아이디" id="id">
 						<p class="message">아이디값을 입력하세요.</p>
-						<label for="password" class=""><span class="skip">비밀번호</span></label>
+						<label for="password"><i class="fas fa-unlock-alt"></i><span class="skip">비밀번호</span></label>
 						<input type="password" placeholder="비밀번호" id="password">
 						<p class="message">비밀번호를 입력하세요.</p>
 						<button id="btn_login">로그인</button>
