--- a/portfolio/work_gm.html
+++ b/portfolio/work_gm.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>featured work - f&b</title>
+    <title>featured work - gentlemonster</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -40,7 +40,7 @@
       color: #5d5b5b;
       padding: 0;
       /* 백그라운드 고정 */
-      background-image: url(images/featuredwork1.jpg);
+      background-image: url(images/gentlemonster.jpg);
       background-color: #fff;
       background-repeat: no-repeat;
       background-size: cover;
@@ -57,22 +57,15 @@
       box-sizing: border-box;
     }
 
-    .top_box .main_title1{
-      font-size: 13px;
-      position: absolute;
-      left: 152px;
-      color: #9e9e9e;
-      font-size: 14px;
-      font-weight: 300;
-      text-transform: uppercase
-    }
-    .top_box .main_title2{font-size: 100px;font-weight: 500px;
+    .top_box .main_title1{font-size: 13px;position: absolute;
+      left: 152px;color: #fff;font-size: 14px;font-weight: 300;text-transform: uppercase}
+    .top_box .main_title2{font-size: 100px;font-weight: 500px;color: #fff;
       transition: font-size .5s;}
-
+    .info_title{margin-left: 5px;}
     .top_box .info_title .info_role{font-size: 18px;margin-right: 5em;
-      color: #9e9e9e;letter-spacing: 0.05rem;}
+      color: #fff;letter-spacing: 0.05rem;}
     .top_box .info_title .info_role .info_role_text{font-size: 18px;font-weight: 300px;
-      color: #9e9e9e;margin-left: 0.5em;}
+      color: #fff;margin-left: 0.5em;}
 
 
 
@@ -245,17 +238,19 @@
     /* 모바일================================================================== */
     @media (max-width:767px) {
 
-      .top_box{height: 780px;background-size: auto;}
+      .top_box{height: 780px;background-size: cover;}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
-      .top_box .main_title1{left: 58px;}
-      .top_box .main_title2{font-size: 40px;margin-top: 10px;}
-      .top_box .info_title .info_role{margin-right: 0;}
+      .top_box .main_title1{left: 58px;color: #fff;}
+      .top_box .main_title2{font-size: 24px;margin-top: 10px;}
+      .info_title{margin-left: 0;}
+      .top_box .info_title .info_role{margin-right: 0;color: #fff;}
+      .top_box .info_title .info_role .info_role_text{color: #fff;}
       .title2, .title3{font-size: 24px;}
-      .details{height: 800px; margin-top: 100px;}
+      .details{height: 920px; margin-top: 100px;}
       .details .container{height: auto;}
-      .details .details_info{margin-top: 100px;}
+      .details .details_info{margin-top: 150px;}
       .article_detail .detail_main .shots{padding: 2em 1.8em;}
-      .article_detail .detail_main .shots .shots_item{margin: 21% auto 0;}
+      .article_detail .detail_main .shots .shots_item{margin: 21% auto 0;margin-top: 127px;}
       .article_detail .detail_main .slider{padding: 2em 4em;}
 
       .slider_inner{padding: 0;}
@@ -298,11 +293,10 @@
     <div class="wrap_work">
       <section id="top_box" class="top_box">
         <div class="container">
-          <span class="main_title1">FEATURED WORK - 1</span>
-          <h2 class="main_title2">F&B</h2>
+          <span class="main_title1">FEATURED WORK - 5</span>
+          <h2 class="main_title2">GENTLEMONSTER</h2>
           <div class="info_title">
-            <!-- <p class="info_type">TYPE<span class="info_type_text">PUBLISHING</span></p> -->
-            <p class="info_role">ROLE |<span class="info_role_text">PUBLISHING(100%)</span></p>
+            <p class="info_role">ROLE |<span class="info_role_text">DESIGN(100%) PUBLISHING(100%)</span></p>
           </div>
         </div>
       </section>
@@ -312,30 +306,32 @@
         <div class="container">
           <!-- img -->
           <div class="col-md-6 col-sm-6 col-xs-12 details_img">
-            <img src="images/F&B.png" alt="포트폴리오 각 미디어 별 이미지">
+            <img src="images/gentlemonster_main.png" alt="포트폴리오 각 미디어 별 이미지">
           </div>
           <!-- info -->
           <div class="col-md-6 col-sm-6 col-xs-12 details_info">
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>TYPE</dt>
-              <dd>PC|TABLET| MOBILE</dd>
+              <dd>PC</dd>
             </dl>
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>ROLE</dt>
-              <dd>PUBLISHING</dd>
+              <dd>DESIGN(100%)|PUBLISHING(100%)</dd>
             </dl>
             <dl class="col-md-12 col-sm-12 col-xs-12">
               <dt>OVERVIEW</dt>
-              <dd>의류 쇼핑몰 사이트입니다. 반응형을 목적으로 제작하였습니다.</dd>
+              <dd>선글라스,안경 전문 브랜드인 젠틀몬스터의 리뉴얼 사이트입니다.
+              사이트 전체가 원페이지 형식으로 스크롤 이벤트를 이용해 동적인 느낌을 주고
+              필요한 기능들을 담기위해 노력했습니다.</dd>
             </dl>
             <dl class="col-md-6 col-sm-6 col-xs-12">
               <dt>DURATION</dt>
-              <dd>2017.1</dd>
+              <dd>2019.3</dd>
             </dl>
             <!-- 사이트 링크 버튼,깃헙 링크 버튼 -->
             <div class="col-md-12 col-sm-12 col-xs-12 details_btn">
-              <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
-              <a href="https://github.com/jar3543/github/tree/master/F%26B" class="underlined">github<i class="fas fa-arrow-right"></i></a>
+              <a href="https://jar3543.github.io/github/gentlemonster/index.html" class="underlined">Demo<i class="fas fa-arrow-right"></i></a>
+              <a href="https://github.com/jar3543/github/tree/master/gentlemonster" class="underlined">github<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -349,51 +345,25 @@
               <ul class="shots">
                 <li class="shots_item unveiled">
                   <a href="#" class="item_link">
-                    <img class="shots_item_img lazyload" src="images/work_f&b_intro_img.png" alt="f&b 메인 이미지">
+                    <img class="shots_item_img lazyload" src="images/work_gentlmonster_main.png" alt="젠틀몬스터 메인 이미지">
                   </a>
                 </li>
                 <li class="shots_item unveiled">
                   <a href="#" class="item_link">
-                    <img class="shots_item_img lazyload" src="images/work_f&b_index_img.png" alt="f&b 인트로 이미지">
+                    <img class="shots_item_img lazyload" src="images/work_gentlemonster_item.png" alt="젠틀몬스터 메뉴 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_gentlemonster_menu.png" alt="젠틀몬스터 메뉴 이미지">
+                  </a>
+                </li>
+                <li class="shots_item unveiled">
+                  <a href="#" class="item_link">
+                    <img class="shots_item_img lazyload" src="images/work_gentlemonster_search.png" alt="젠틀몬스터 메뉴 이미지">
                   </a>
                 </li>
               </ul>
-              <div class="slider">
-                <div class="slider_inner">
-                  <div class="swiper-button-prev"><i class="fas fa-arrow-left"></i></div>
-                  <div class="swiper-button-next"><i class="fas fa-arrow-right"></i></div>
-                  <div class="swiper-container">
-                      <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                          <div class="swiper-zoom-container">
-                            <img src="images/f&b_m_00.png" alt="">
-                          </div>
-                        </div>
-                        <div class="swiper-slide">
-                          <div class="swiper-zoom-container">
-                            <img src="images/f&b_m_01.png" alt="">
-                          </div>
-                        </div>
-                        <div class="swiper-slide">
-                          <div class="swiper-zoom-container">
-                            <img src="images/f&b_m_02.png" alt="">
-                          </div>
-                        </div>
-                        <div class="swiper-slide">
-                          <div class="swiper-zoom-container">
-                            <img src="images/f&b_m_03.png" alt="">
-                          </div>
-                        </div>
-                        <div class="swiper-slide">
-                          <div class="swiper-zoom-container">
-                            <img src="images/f&b_m_04.png" alt="">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -407,9 +377,9 @@
 
     <!-- footerbar==========================================================-->
     <div class="wow fadeInUp animated footerbar">
-      <a href="https://jar3543.github.io/github/portfolio/work_gm.html" class="footer_btn"><span>prev</span></a>
-      <a href="https://github.com/jar3543/github/tree/master/F%26B" class="footer_btn"><span>view code</span></a>
-      <a href="https://jar3543.github.io/github/portfolio/work_sidmool.html" class="footer_btn"><span>next</span></a>
+      <a href="https://jar3543.github.io/github/portfolio/work_motte.html" class="footer_btn"><span>prev</span></a>
+      <a href="https://github.com/jar3543/github/tree/master/gentlemonster" class="footer_btn"><span>view code</span></a>
+      <a href="https://jar3543.github.io/github/portfolio/work_f&b.html" class="footer_btn"><span>next</span></a>
     </div>
     <!-- footer============================================================ -->
     <footer>
