--- a/portfolio/work_gm.html
+++ b/portfolio/work_gm.html
@@ -238,7 +238,7 @@
     /* 모바일================================================================== */
     @media (max-width:767px) {
 
-      .top_box{height: 780px;background-size: cover;}
+      .top_box{height: 780px;background:#d1d1da;}
       .top_box .container{padding: 6em 3.5em 0 3.5em;}
       .top_box .main_title1{left: 58px;color: #fff;}
       .top_box .main_title2{font-size: 24px;margin-top: 10px;}
